<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tool_background"
    android:fillViewport="true"
    tools:context=".Customer.Activities.C_LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/round_right_left_corner"
            android:elevation="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/av_ltstd_roman"
                android:gravity="center"
                android:text="@string/loginTocon"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/av_ltstd_roman"
                android:gravity="center"
                android:text="As Customer"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/c_login_email_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/enterEmail"
                android:paddingBottom="@dimen/_20sdp"
                android:singleLine="true"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">


                <EditText
                    android:id="@+id/c_login_pass_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:hint="@string/enterPass"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/showHidePass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="Show"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/setErrorTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/c_login_forgot_tv"
                    android:layout_weight="1"
                    android:text=""
                    android:textColor="@color/red"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/c_login_forgot_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/forgotPass"
                    android:textColor="@color/blue" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:text="@string/loginBy"
                    android:textColor="@color/black" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/c_login_with_fb_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:src="@mipmap/facebook" />

                    <ImageView

                        android:id="@+id/sign_in_button"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/google" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/c_login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/capsule_button_shape"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/c_login_register_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/capsule_button_shape_bla"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>