<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/tool_background"
    android:fillViewport="true"
    tools:context=".Customer.Activities.C_LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/round_right_left_corner"
            android:elevation="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/av_ltstd_roman"
                android:gravity="center"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/av_ltstd_roman"
                android:gravity="center"
                android:text="As Salon"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/first_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <EditText
                    android:id="@+id/c_registr_Salname_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterSalon"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/c_registr_email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterEmail"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />


                <EditText
                    android:id="@+id/c_registr_pass_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterPass"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/c_registr_numer_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterNumber"
                    android:inputType="number"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/c_registr_country_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enterCountry"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />


                <EditText
                    android:id="@+id/c_registr_address_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableRight="@drawable/ic_gps_fixed_black_24dp"
                    android:hint="@string/enterAddress"
                    android:inputType="text"
                    android:paddingBottom="@dimen/_20sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"

                android:orientation="vertical"
                android:visibility="gone">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    android:src="@mipmap/profile" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:gravity="center"
                    android:text="@string/addProfile" />

                <TextView
                    android:id="@+id/p_service_add_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/adservice"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:id="@+id/serviceRecyclerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/serviceRecycler"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1.5">

                    </androidx.recyclerview.widget.RecyclerView>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/add_service"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:theme="@style/ChipTheme"
                        app:chipIcon="@drawable/ic_add_circle_outline_black_24dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:background="@drawable/capsule_button_shape_grey"
                        android:drawableRight="@drawable/ic_add_circle_outline_black_24dp"
                        android:padding="@dimen/_8sdp"
                        android:text="dksk"
                        android:visibility="gone" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/subs_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"></androidx.recyclerview.widget.RecyclerView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone"
                    android:id="@+id/subsCard"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_8sdp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/capsule_edittxt_shape_grey"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:text="Card Number"
                                android:textColor="@color/off_grey"
                                android:textSize="@dimen/_11sdp"
                                android:textStyle="normal" />

                            <EditText
                                android:id="@+id/cardNumberEditText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1.3"
                                android:background="@null"
                                android:hint="1234 5678 9098 7785"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/_11sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.2"
                                android:background="@drawable/capsule_edittxt_shape_grey"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".7"
                                    android:text="MM/YY"

                                    android:textColor="@color/off_grey"
                                    android:textSize="@dimen/_11sdp"
                                    android:textStyle="normal" />

                                <EditText
                                    android:id="@+id/carDate"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1.3"
                                    android:background="@null"
                                    android:gravity="end"
                                    android:hint="09/2019"
                                    android:inputType="number"
                                    android:singleLine="true"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/_11sdp" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="@dimen/_10sdp"
                                android:layout_weight=".8"
                                android:background="@drawable/capsule_edittxt_shape_grey"
                                android:orientation="horizontal"
                                android:weightSum="2">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight=".7"
                                    android:text="CVV"
                                    android:textColor="@color/off_grey"
                                    android:textSize="@dimen/_11sdp"
                                    android:textStyle="normal" />

                                <EditText
                                    android:id="@+id/cardCVV"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1.3"
                                    android:background="@null"
                                    android:gravity="end"
                                    android:hint="***"
                                    android:inputType="numberPassword"
                                    android:maxLength="3"
                                    android:singleLine="true"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/_11sdp" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:background="@drawable/capsule_edittxt_shape_grey"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".7"
                                android:text="Name on card"
                                android:textColor="@color/off_grey"
                                android:textSize="@dimen/_11sdp"
                                android:textStyle="normal" />

                            <EditText
                                android:id="@+id/cardHolder"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1.3"
                                android:background="@null"
                                android:gravity="end"
                                android:hint="johnson"
                                android:maxLength="20"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/_11sdp" />
                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>


            <Button
                android:id="@+id/c_registr_next_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/capsule_button_shape"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/p_registr_back_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/capsule_button_shape_bla"
                android:text="@string/backLogin"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>